What we do horizontal scroll fix v12

--- a/app/styles.css
+++ b/app/styles.css
@@ -158,5 +158,5 @@
 
 .scroll-element {
   overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: auto;
 }
